--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
 </head>
 
-<body>
+<body data-bs-spy="scroll" data-bs-target="#navbar-example">
 
 <header>
 
   <!-- ! NAVBAR -->
-  <nav class="autohide navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="autohide navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="navbar-example2">
     <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -71,7 +71,7 @@
     </div>
   </nav>
   
-  
+
    <!-- ! Background Image For Header -->
    <section class="home" id="home">
    <div class="p-5 text-center bg-image" id="bg-header" style="
@@ -87,11 +87,7 @@
      </div>
  </div>
 
-
 </section>
-
-
-
 
 <!-- ! SIGN UP FORM -->
 <div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModalLabel" aria-hidden="true">
@@ -124,7 +120,7 @@
 
           <div class="form-group">
             <label for="user-name" class="col-form-label">User name:</label>
-            <input type="text" class="form-control" id="user-name"  placeholder="Enter your user name...">
+            <input type="text" class="form-control" placeholder="Enter your user name...">
           </div>
 
           <div class="form-group">
@@ -164,12 +160,12 @@
 
           <div class="form-group">
             <label for="user-name" class="col-form-label">User name:</label>
-            <input type="text" class="form-control" id="user-name"  placeholder="Enter your user name...">
+            <input type="text" class="form-control" placeholder="Enter your user name...">
           </div>
 
           <div class="form-group">
             <label for="password" class="col-form-label">Password:</label>
-            <input type="password" class="form-control" id="password" placeholder="Enter your password...">
+            <input type="password" class="form-control" placeholder="Enter your password...">
           </div>
 
           <input type="checkbox" id="remember">
@@ -380,7 +376,7 @@
     <span>N</span>
   </h1>
 
-  <div class="h_iframe-aparat_embed_frame video-responsive">
+  <div class="h_iframe-aparat_embed_frame video-responsive text-center">
     <span style="display: block;padding-top: 57%"></span>
     <iframe src="https://www.aparat.com/video/video/embed/videohash/eFGnz/vt/frame?titleShow=true"  allowFullScreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
   </div>
@@ -424,210 +420,8 @@
   </div>
 
   </div>
-
 </section>
 
-
-
-<!-- <section class="gallery" id="gallery">
-
-  <h1 class="heading">
-    <span>g</span>
-    <span>a</span>
-    <span>l</span>
-    <span>l</span>
-    <span>e</span>
-    <span>r</span>
-    <span>y</span>
-  </h1>
-
-  <div class="box-container">
-
-    <div class="box">
-      <img src="assets/g-1.jpg" alt="">
-      <div class="content">
-        <h3>amazing places</h3>
-        <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-        <a href="#" class="btn">see more</a>
-      </div>
-    </div>
-    <div class="box">
-      <img src="assets/g-2.jpg" alt="">
-      <div class="content">
-        <h3>amazing places</h3>
-        <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-        <a href="#" class="btn">see more</a>
-      </div>
-    </div>
-    <div class="box">
-      <img src="assets/g-3.jpg" alt="">
-      <div class="content">
-        <h3>amazing places</h3>
-        <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-        <a href="#" class="btn">see more</a>
-      </div>
-    </div>
-    <div class="box">
-      <img src="assets/g-4.jpg" alt="">
-      <div class="content">
-        <h3>amazing places</h3>
-        <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-        <a href="#" class="btn">see more</a>
-      </div>
-    </div>
-    <div class="box">
-      <img src="assets/g-5.jpg" alt="">
-      <div class="content">
-        <h3>amazing places</h3>
-        <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-        <a href="#" class="btn">see more</a>
-      </div>
-    </div>
-    <div class="box">
-      <img src="assets/g-6.jpg" alt="">
-      <div class="content">
-        <h3>amazing places</h3>
-        <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-        <a href="#" class="btn">see more</a>
-      </div>
-    </div>
-    <div class="box">
-      <img src="assets/g-7.jpg" alt="">
-      <div class="content">
-        <h3>amazing places</h3>
-        <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-        <a href="#" class="btn">see more</a>
-      </div>
-    </div>
-    <div class="box">
-      <img src="assets/g-8.jpg" alt="">
-      <div class="content">
-        <h3>amazing places</h3>
-        <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-        <a href="#" class="btn">see more</a>
-      </div>
-    </div>
-    <div class="box">
-      <img src="assets/g-9.jpg" alt="">
-      <div class="content">
-        <h3>amazing places</h3>
-        <p>LJust why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-        <a href="#" class="btn">see more</a>
-      </div>
-    </div>
-
-  </div>
-
-</section>
- -->
-<!-- <section class="review" id="review">
-
-  <h1 class="heading">
-    <span>r</span>
-    <span>e</span>
-    <span>v</span>
-    <span>i</span>
-    <span>e</span>
-    <span>w</span>
-  </h1>
-  <div class="swiper-container review-slider">
-    <div class="swiper-wrapper">
-
-      <div class="swiper-slide">
-        <div class="box">
-          <img src="assets/pic1.png" alt="">
-          <h3>james</h3>
-          <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-          <div class="stars">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="far fa-star"></i>
-          </div>
-        </div>
-      </div>
-      <div class="swiper-slide">
-        <div class="box">
-          <img src="assets/pic2.png" alt="">
-          <h3>jessica</h3>
-          <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-          <div class="stars">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="far fa-star"></i>
-          </div>
-        </div>
-      </div>
-      <div class="swiper-slide">
-        <div class="box">
-          <img src="assets/pic3.png" alt="">
-          <h3>sarah</h3>
-          <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-          <div class="stars">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="far fa-star"></i>
-          </div>
-        </div>
-      </div>
-      <div class="swiper-slide">
-        <div class="box">
-          <img src="assets/pic4.png" alt="">
-          <h3>alex</h3>
-          <p>Just why do we love to travel so much? It's an experience that goes beyond checking things off a list and counting countries.</p>
-          <div class="stars">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="far fa-star"></i>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-</section> -->
-<!-- <section class="contact" id="contact">
-
-  <h1 class="heading">
-    <span>c</span>
-    <span>o</span>
-    <span>n</span>
-    <span>t</span>
-    <span>a</span>
-    <span>c</span>
-    <span>t</span>
-  </h1>
-
-  <div class="row">
-
-    <div class="image">
-      <img src="assets/contact-us.png" alt="">
-    </div>
-
-    <form action="">
-      <div class="inputBox">
-        <input type="text" placeholder="name">
-        <input type="email" placeholder="email">
-      </div>
-      <div class="inputBox">
-        <input type="number" placeholder="number">
-        <input type="text" placeholder="subject">
-      </div>
-      <textarea placeholder="message" name="" id="" cols="30" rows="10"></textarea>
-      <input type="submit" class="btn" value="send message">
-    </form>
-
-  </div>
-
-</section>
- -->
 <section class="footer">
 
   <div class="box-container">
@@ -651,6 +445,7 @@
       <a href="#services">services</a>
       <a href="#works">works</a>
       <a href="#gallery">gallery</a>
+      <a href="#learn">learn</a>
       <a href="#contact">contact</a>
     </div>
 
@@ -661,9 +456,6 @@
   </div>
 </section> 
 
-
-
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <script src="javascript.js"></script>
 
 </body>
